fixing layout issues

--- a/src/app/earth/earth.component.scss
+++ b/src/app/earth/earth.component.scss
@@ -211,7 +211,7 @@
   .tabs {
     right: 0;
     left: unset;
-    margin-right: 10.31rem;
+    margin-right: 9.5rem;
 
     margin-top: 7.9rem;
   }
@@ -229,6 +229,12 @@
     max-width: 28.125rem;
     margin-top: 10.13rem;
     margin-left: 15.94rem;
+  }
+  .earth__img-geology {
+    left: 0;
+    max-width: 10.1875rem;
+    margin-left: 24.94rem;
+    margin-top: 29rem;
   }
   .tab__content {
     justify-items: start;
